--- a/overlay-lineage/FrameworksBaseOverlay/AndroidManifest.xml
+++ b/overlay-lineage/FrameworksBaseOverlay/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2023 The LineageOS Project
+     Copyright (C) 2019-2023 Evolution X
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-     package="android.xiaomi_sdm660">
+     package="android.xiaomi_lavender.lineage">
      <overlay android:targetPackage="android"
           android:isStatic="true"
           android:priority="1000" />
