--- a/overlay-lineage/SettingsOverlay/AndroidManifest.xml
+++ b/overlay-lineage/SettingsOverlay/AndroidManifest.xml
@@ -4,8 +4,8 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-     package="android.xiaomi_sdm660">
-     <overlay android:targetPackage="android"
+     package="com.android.settings.overlay.lineage">
+     <overlay android:targetPackage="com.android.settings"
           android:isStatic="true"
           android:priority="1000" />
 </manifest>
